# book-code

./: .gitignore  README.md
lecture1-introduction/exercises/: chp1_ex1_1.m  chp1_ex1_2.m  chp1_ex2.m
lecture10-force-control/exercises/: lect10_ex1.m  lect10_ex2.m  lect10_ex3.m
lecture2-learning-from-demonstration/: Instructions Lecture 2 - Online LaTeX Editor Overleaf.URL
lecture2-learning-from-demonstration/exercises/: chp2_algo1_inverse_kinematic.m  chp2_algo1_optimal_control.m
lecture3-intro-to-dynamical-systems/exercises/: appA_ex1.m
lecture4-learning-control-laws/: setup_code_ch3.m
lecture4-learning-control-laws/exercises/: ch3_ex0_drawData.m  ch3_ex1_ffnnDS.m  ch3_ex1_gmrDS.m  ch3_ex1_gprDS.m  ch3_ex1_svrDS.m  ch3_ex2_designDS.m  ch3_ex3_seDS.m  ch3_ex4_lpvDS.m  gui_lpvDS.m  gui_seDS.m  penm_log.txt
lecture4-learning-control-laws/mac_setup/: ControlFlag.txt  READ_ME.md
lecture6-modulating-ds/exercises/: lect6_ex1.m  lect6_ex2.m
lecture7-obstacle-avoidance/exercises/: lect7_ex1_1.m  lect7_ex1_2.m  lect7_ex1_3.m  lect7_ex2.m
lecture9-compliant-control/exercises/: lect9_ex1.m  lect9_ex2.m
libraries/book-ds-opt/: demo_learn_lpvDS.m  demo_learn_seDS.m
libraries/book-sods-opt/: README.md
libraries/utilities/: import_dataset.m  lpvDStoYAML.m  seDStoYAML.m
practical_1/: DS_control.m  ds_control.mat  learning_3D_DS.m  setup_code_ch3.m
practical_1/dataset/: MPC_test_dataset.mat  MPC_train_dataset.mat  demonstration_dataset.mat  generate_theoretical_DS.m
practical_1/mac_setup/: MAC_config.sh  READ_ME.md
practical_1/solutions/: MPC_LPVDS.m  MPC_SEDS.m  demonstration_LPVDS.m  theoretical_SEDS.m
practical_2/: ds_control.mat  practical2_main.m  practical2_main_solution.m
practical_2/library_solution/: Environment.m  Plane.m  Shapes.m  VerticalCylinder.m  VerticalEllipsoid.m
practical_3/: .gitignore  README.md  practical3_main.m  setup.md
practical_3/datasets/: theoretical_DS_dataset.mat
practical_3/matlab/: DS.m  (+8 more)
practical_3/matlab_bridge/: CMakeLists.txt  package.xml
practical_3/matlab_bridge/include/matlab_bridge/: FrankaInterface.hpp  MatlabBridge.hpp
practical_3/matlab_bridge/launch/: joint_space_avoidance.launch.py  matlab_bridge.launch.py
practical_3/matlab_bridge/scripts/: MppiController.py  MppiPlanner.py  ObstacleManagerGUI.py  ObstacleStreamerBridge.py  ObstacleZMQBridge.py  PathZMQBridge.py
practical_3/matlab_bridge/scripts/ds_mppi/: config.yaml
practical_3/matlab_bridge/scripts/ds_mppi/functions/: LinDS.py  MPPI.py  SEDS.py  cost.py  fk_num.py  fk_sym_gen.py  policy.py  robot_interface.py  zmq_utils.py
practical_3/matlab_bridge/scripts/ds_mppi/models/: franka_collision_model.pt
practical_3/matlab_bridge/scripts/ds_mppi/sdf/: network_macros_mod.py  robot_sdf.py
practical_3/matlab_bridge/src/: FrankaInterface.cpp  MatlabBridge.cpp  RobotStateSubscriber.cpp
(+493 files in other folders)
