<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>matlab_bridge</name>
  <version>1.0.0</version>
  <description>TODO</description>
  <maintainer email="dominic.reber@epfl.ch">Dominic Reber</maintainer>
  <maintainer email="maxime.gautier@epfl.ch">Maxime Gautier</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>modulo_core</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>tf2_ros</depend> 
  <depend>python-transforms3d-pip</depend>
  <exec_depend>python3-pyzmq</exec_depend>
  <exec_depend>transforms3d</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
